--- a/content/style.css
+++ b/content/style.css
@@ -1,4 +1,36 @@
 body {
     background-color: black;
     color: white;
+    font-family: serif;
+}
+
+a:link, a:visited, a:hover, a:active {
+    color: rgb(255, 180, 0);
+}
+
+p.center {
+    text-align: center;
+}
+
+p.title {
+    font-weight: bold;
+    font-size: 80px;
+}
+
+p.subtitle {
+    font-size: 40px;
+}
+
+p.menu {    
+    color: rgb(255, 180, 0);
+    font: bold 20px;
+    min-height: 100px;
+}
+
+p.body {
+    min-height: 400px;
+}
+
+p.footer {
+    font-size: 12px;
 }
